==============
lxml changelog
==============

Under development
=================

Features added
--------------

* Support ``base_url`` keyword argument in ``HTML()`` and ``XML()``

* Extended type support for ``objectify.E`` based on registered PyTypes.
  Supports an additional argument to ``PyType()`` that takes a conversion
  function to strings to support setting text values from arbitrary types.

* Entity support through an ``Entity`` factory and element classes. XML
  parsers now have a ``resolve_entities`` keyword argument that can be set to
  False to keep entities in the document.

* ``column`` field on error log entries to accompany the ``line`` field

* Error specific messages in XPath parsing and evaluation
  NOTE: for evaluation errors, you will now get an XPathEvalError instead of
  an XPathSyntaxError.  To catch both, you can except on ``XPathError``

* The regular expression functions in XPath now support passing a node-set
  instead of a string

* Extended type annotation in objectify: new ``xsiannotate()`` function

* EXSLT RegExp support in standard XPath (not only XSLT)

Bugs fixed
----------

* ``Element()`` did not raise an exception on tag names containing ':'

* The XML parser did not report undefined entities as error

* The text in exceptions raised by XML parsers, validators and XPath
  evaluators now reports the first error that occurred instead of the last

* passing '' as XPath namespace prefix did not raise an error

* Thread safety in XPath evaluators

Other changes
-------------

* major refactoring in XPath/XSLT extension function code


1.3.2 (2007-07-03)
==================

Features added
--------------

Bugs fixed
----------

* "deallocating None" crash bug


1.3.1 (2007-07-02)
==================

Features added
--------------

* objectify.DataElement now supports setting values from existing data
  elements (not just plain Python types) and reuses defined namespaces etc.
